change main components

--- a/CalcBlazor/Shared/MainLayout.razor
+++ b/CalcBlazor/Shared/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-
+<!--===== Horni lista =====-->
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -7,7 +7,7 @@
 
     <div class="main">
         <div class="top-row px-4">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+            <a href="http://jakubgrund.eu" target="_blank" class="ml-md-auto">By Jakub Grund</a>
         </div>
 
         <div class="content px-4">
