--- a/CalcBlazor/Pages/CalculatorPage.razor
+++ b/CalcBlazor/Pages/CalculatorPage.razor
@@ -9,27 +9,64 @@
 
 <!--===== HTML Calculator =====-->
 
-<div class="calculator">
-    <div class="calc-container">
+   <div class="container">
 
-        <div class="output">
+            <div class="display">
+                <input id="screendisplay" type="text" placeholder="0">
+            </div>
 
-        </div>
+            <div class="buttons">
+                <div class="row">
+                    <button id="ce"class="function">CE</button>
+                    <button class="function">π</button>
+                    <button class="">(</button>
+                    <button class="">)</button>
+                    <button class="n">%</button>
+                    <button id="ac"class="function" >AC</button>
+                </div>
 
-        
-        <div class="input"></div>
+                <div class="row">
+                    <button class="function">sin</button>
+                    <button class="function">ln</button>
+                    <button class="value">7</button>
+                    <button class="value">8</button>
+                    <button class="value">9</button>
+                    <button class="operator">÷</button>
+                </div>
 
-    </div>
-</div>
+                <div class="row">
+                    <button class="function">cos</button>
+                    <button class="function">log</button>
+                    <button class="value">4</button>
+                    <button class="value">5</button>
+                    <button class="value">6</button>
+                    <button class="operator"> × </button>
+                </div>
 
+                <div class="row">
+                    <button class="function">tan</button>
+                    <button class="function">√</button>
+                    <button class="value">1</button>
+                    <button class="value">2</button>
+                    <button class="value">3</button>
+                    <button class="operator">-</button>
+                </div>
 
-
-
-
-
+                <div class="row">
+                    <button class="function">e</button>
+                    <button class="function">x <span style="position: relative; bottom: .4em; right: .1em;">y</span> </button>
+                    <button class="value">0</button>
+                    <button class="">.</button>
+                    <button id="eval" class="operator">=</button>
+                    <button class="operator">+</button>
+                </div>
+            </div>
+   </div>
 
 
 @code {
+
+    /*Ukazka*/
     private int currentCount = 0;
 
     private void IncrementCount()
