--- a/CalcBlazor/Pages/CalculatorPage.razor
+++ b/CalcBlazor/Pages/CalculatorPage.razor
@@ -18,11 +18,13 @@
             <div class="buttons">
                 <div class="row">
                     <button id="ce"class="function">CE</button>
-                    <button class="function">π</button>
-                    <button class="">(</button>
-                    <button class="">)</button>
-                    <button class="n">%</button>
-                    <button id="ac"class="function" >AC</button>
+                    <button class="function">1/x</button>
+                    <button class="function" >C</button>
+                     <button class="function">%</button>
+                    <button class="function">±</button>
+                    <button class="function">⌫</button>
+                    
+                    
                 </div>
 
                 <div class="row">
@@ -45,7 +47,7 @@
 
                 <div class="row">
                     <button class="function">tan</button>
-                    <button class="function">√</button>
+                    <button class="function">x <span style="position: relative; bottom: .2em; right: .05em;">2</span> </button>
                     <button class="value">1</button>
                     <button class="value">2</button>
                     <button class="value">3</button>
@@ -53,10 +55,10 @@
                 </div>
 
                 <div class="row">
-                    <button class="function">e</button>
-                    <button class="function">x <span style="position: relative; bottom: .4em; right: .1em;">y</span> </button>
+                     <button class="function">π</button>
+                    <button class="function">x <span style="position: relative; bottom: .2em; right: .05em;">3</span> </button>
                     <button class="value">0</button>
-                    <button class="">.</button>
+                    <button class="value">.</button>
                     <button id="eval" class="operator">=</button>
                     <button class="operator">+</button>
                 </div>
