changes html and css

--- a/CalcBlazor/Pages/CalculatorPage.razor
+++ b/CalcBlazor/Pages/CalculatorPage.razor
@@ -16,51 +16,62 @@
             </div>
 
             <div class="buttons">
-                <div class="row">
-                    <button id="ce"class="function">CE</button>
-                    <button class="function">1/x</button>
-                    <button class="function" >C</button>
-                     <button class="function">%</button>
-                    <button class="function">±</button>
-                    <button class="function">⌫</button>
+
+                <div class="simply">
+
+                    <div class="row">
+                        <button class="btnspace">⌫</button>
+                        <button id="ce"class="btnclear">CE</button>
+                        <button class="btnclear" >C</button>
+                        <button class="btnplusminus">±</button>
+                    </div>
+                    <div class="row">
+                        <button class="value">7</button>
+                        <button class="value">8</button>
+                        <button class="value">9</button>
+                        <button class="operator">÷</button>                      
+                    </div>
+                     <div class="row">
+                        <button class="value">4</button>
+                        <button class="value">5</button>
+                        <button class="value">6</button>
+                        <button class="operator"> × </button>
+                    </div>
+                    <div class="row">
+                        <button class="value">1</button>
+                        <button class="value">2</button>
+                        <button class="value">3</button>
+                        <button class="operator">-</button>
+                    </div>
+                    <div class="row">
+                        <button class="value">0</button>
+                        <button class="value">.</button>
+                        <button id="eval" class="btnresult">=</button>
+                        <button class="operator">+</button>
+                    </div>
+                </div>   
+                <div class="scientic">
+                    <div class="row">
+                        <button class="btnlog">log</button>
+                        <button class="btnx2">x^2</button>
+                    </div>
+                    <div class="row">
+                        <button class="btncos">cos</button>
+                        <button class="btnx3">x^3</button>
+                    </div>
+                    <div class="row">
+                        <button class="btnsinn">sin</button>
+                        <button class="btnlnx">ln</button>
+                    </div> 
+                     <div class="row">
+                        <button class="btntan">tan</button>
+                        <button class="btn1x">1/x</button>
+                    </div>   
+                    <div class="row">
+                         <button class="btnpi">π</button>
+                         <button class="btnpercentage">%</button>
+                    </div>
                     
-                    
-                </div>
-
-                <div class="row">
-                    <button class="function">sin</button>
-                    <button class="function">ln</button>
-                    <button class="value">7</button>
-                    <button class="value">8</button>
-                    <button class="value">9</button>
-                    <button class="operator">÷</button>
-                </div>
-
-                <div class="row">
-                    <button class="function">cos</button>
-                    <button class="function">log</button>
-                    <button class="value">4</button>
-                    <button class="value">5</button>
-                    <button class="value">6</button>
-                    <button class="operator"> × </button>
-                </div>
-
-                <div class="row">
-                    <button class="function">tan</button>
-                    <button class="function">x <span style="position: relative; bottom: .2em; right: .05em;">2</span> </button>
-                    <button class="value">1</button>
-                    <button class="value">2</button>
-                    <button class="value">3</button>
-                    <button class="operator">-</button>
-                </div>
-
-                <div class="row">
-                     <button class="function">π</button>
-                    <button class="function">x <span style="position: relative; bottom: .2em; right: .05em;">3</span> </button>
-                    <button class="value">0</button>
-                    <button class="value">.</button>
-                    <button id="eval" class="operator">=</button>
-                    <button class="operator">+</button>
                 </div>
             </div>
    </div>
