--- a/CalcBlazor/Pages/CalculatorPage.razor.css
+++ b/CalcBlazor/Pages/CalculatorPage.razor.css
@@ -13,11 +13,24 @@
     margin-left: 12em;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 
-        13px 13px 20px #cbced1,
-        -13px -13px 20px #ffffff;
-    max-width: 800px;
+    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
+    max-width: 500px;
 }
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+}
+.simply {
+    position: relative;
+    bottom: 1px;
+    right: 5px;
+}
+
+.scientic {
+    margin-left: 30px;
+}
+
 .row {
     margin-left: 9px;
 }
@@ -71,13 +84,6 @@
         box-shadow: inset 5px 5px 8px #33ffd0, inset -5px -5px 8px #33ffd0;
     }
 
-#ce {
-    background: #0090a7;
-    color: #f8f9fa;
-}
-    #ce:hover {
-        box-shadow: inset 5px 5px 8px #0090a7, inset -5px -5px 8px #0090a7;
-    }
 
 
 
