--- a/CalcBlazor/Pages/CalculatorPage.razor.css
+++ b/CalcBlazor/Pages/CalculatorPage.razor.css
@@ -84,7 +84,11 @@
         box-shadow: inset 5px 5px 8px #33ffd0, inset -5px -5px 8px #33ffd0;
     }
 
-
+h1 {
+    font-size: 2rem;
+    position: relative;
+    left: 18.44rem;
+}
 
 
 
